# Bluetooth_Attendance_System

./: .gitignore  README.md
backend/: README.md  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: attendance.py  health.py  scanner.py  scanner_control.py  sessions.py  students.py  websocket.py
backend/app/core/: config.py  logic.py  validator.py  ws_manager.py
backend/app/models/: attendance.py  session.py  settings.py  student.py
backend/app/services/: attendance.py  attendance_logic.py  scanner_control.py  scanner_ingest.py
backend/tests/: test_esp32_ingest.py  test_scanner_control.py  test_student_creation.py
beacon_app/: README.md  pubspec.yaml
beacon_app/lib/: main.dart
dashboard/frontend/: index.html  package-lock.json  package.json
database/: init_db.py  migrate.py  schema.sql
docs/: API.md  BEACON_PROTOCOL.md  BLE_flow.md  api_design.md  architecture.md  database_design.md  threat_model.md
scanner/: CMakeLists.txt  config.json
scanner/include/: ble_scanner.h  deduplicator.h  device_parser.h  logger.h
scanner/src/: ble_scanner.cpp  ble_scanner.h  deduplicator.cpp  device_parser.cpp  device_parser.h  logger.cpp  main.cpp
scanner_esp32/: README.md  batch_sender.cpp  batch_sender.h  config.h  dedup.cpp  dedup.h  ibeacon.cpp  ibeacon.h  logger.h  scanner_esp32.ino
scripts/: build_scanner.sh  enable_bluetooth.sh  reset_db.sh  run_all.sh  run_backend.sh  run_scanner.sh
shared/constants/: rssi_thresholds.json  timing_rules.json
shared/protocols/: attendance_event.json  scan_event.json
shared/utils/: serializer.py
(+16 files in other folders)
